--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
   <string name="app_name">phishit</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
+  <string name="facebook_app_id">353574913848444</string>
+  <string name="facebook_client_token">df175dcaaaf7cc48e8e89db6c8a2bb4b</string>
 </resources>
